[project]
name = "pki-cli"
version = "0.1.0"
description = "CLI tool for PKI Manager - X.509 certificate management"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Oriol Rius", email = "oriol@joor.net" }
]
keywords = ["pki", "x509", "certificates", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "attrs>=23.0.0",
    "python-dateutil>=2.8.0",
    "shellingham>=1.5.0",
]

[project.scripts]
pki = "pki_cli.main:app"

[project.urls]
Repository = "https://github.com/oriolrius/pki-manager-cli"
Homepage = "https://github.com/oriolrius/pki-manager-web"
Documentation = "https://github.com/oriolrius/pki-manager-cli#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pki_cli", "src/pki_api/pki_manager_rest_api_client"]

[tool.uv]
dev-dependencies = [
    "openapi-python-client>=0.28.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
